# experimenter

./: .deepsource.toml  .dockerignore  .env.circle  .env.integration  .env.integration-tests  .env.sample  .env.test  .git-blame-ignore-revs  .gitignore  .gitmodules  .pyup.yml  CODE_OF_CONDUCT.md  Makefile  PULL_REQUEST_TEMPLATE.md  README.md  circle.yml  code_of_conduct.md  codecov.yml  contributing.md  docker-bake.hcl  docker-compose-cirrus.yml  docker-compose-full.yml  docker-compose-gunicorn.yml  docker-compose-integration-test.yml  docker-compose-legacy.yml  docker-compose-prod.yml  docker-compose-test.yml  docker-compose.integration-test.yml  docker-compose.yml  docker-compose.yml.circleci  old_schema.dot  package-lock.json  sql_generator.py  test-file.txt
app/: .coveragerc  .coveralls.yml  .dockerignore  .eslintrc  .eslintrc.js  .flake8  .prettierrc  .prettierrc.js  .sourcery.yaml  Dockerfile  Dockerfile.dev  celerybeat-schedule  experiment_dates.csv  experiment_dump.json  experiments.json  mypy.ini  package.json  parse_experiments.py  pyproject.toml  pytest.ini  requirements.txt  requirements_dev.txt  tox.ini  uwsgi.ini  versions.csv
app/experimenter/: celery.py  context_processors.py  settings.py  settings_test.py  urls.py
app/experimenter/base/: __init__.py  admin.py  apps.py  checks.py  context_processors.py  models.py  serializers.py
app/experimenter/bugzilla/: client.py  tasks.py
app/experimenter/docs/: README.md  openapi-schema.json  swagger-ui.html
app/experimenter/experiments/: __init__.py  admin.py  api_urls.py  api_views.py  apps.py  bugzilla.py  changelog_utils.py  constants.py  constants_rollouts.py  email.py  filtersets.py  forms.py  models.py  normandy.py  private_api_urls.py  public_api_urls.py  serializers.py  tasks.py  urls.py  views.py  web_urls.py
app/experimenter/features/: __init__.py
app/experimenter/home/: tests.py  urls.py  views.py
app/experimenter/jetstream/: client.py  models.py  tasks.py
app/experimenter/kinto/: README.md  __init__.py  client.py  serializers.py  tasks.py
app/experimenter/legacy-ui/: README.md
app/experimenter/monitoring/: urls.py  views.py
app/experimenter/nimbus-ui/: .eslintrc.js  .rescriptsrc.js  README.md  package.json  schema.graphql
app/experimenter/normandy/: __init__.py  client.py  serializers.py  tasks.py
app/experimenter/notifications/: models.py
app/experimenter/openidc/: middleware.py
app/experimenter/outcomes/: README.md  __init__.py
app/experimenter/projects/: admin.py  forms.py  models.py  serializers.py  urls.py  views.py
app/experimenter/reporting/: constants.py  models.py  tasks.py  views.py
app/experimenter/targeting/: constants.py
app/experimenter/templates/: base.html  radio_field_inline.html  swagger-ui.html
app/fixtures/: locales.json
app/requirements/: constraints.txt  default.txt  integration-test.txt
app/tests/: requirements.txt
app/tests/integration/: conftest.py  e2e_test_variables.json  integration-test.html  test_branched_addon_e2e.py  test_branched_multi_addon_e2e.py  test_create_experiment.py  test_filter_expression_validation.py  test_generic_experiment_e2e.py  test_homepage.py  test_multi_pref_e2e.py  test_objective_and_analysis.py  test_overview.py  test_rollout_addon_e2e.py  test_rollout_prefs_e2e.py  test_single_pref_e2e.py  test_timeline_and_population.py  tox.ini
app/tests/tools/: sdk_eval_check.py
app/typings/celery/: __main__.pyi  _state.pyi  beat.pyi  bootsteps.pyi  canvas.pyi  exceptions.pyi  local.pyi  platforms.pyi  result.pyi  schedules.pyi  signals.pyi  states.pyi
app/typings/django_filters/: __init__.pyi  compat.pyi  conf.pyi  exceptions.pyi  filters.pyi  filterset.pyi  widgets.pyi
app/typings/factory/: base.pyi  declarations.pyi  errors.pyi  mogo.pyi  random.pyi
cirrus/server/: .coveragerc  .dockerignore  .env.example  Dockerfile  pyproject.toml  requirements.txt
experimenter/: .coveragerc  .dockerignore  Dockerfile  fetch-summary.txt  manage.py  package.json  pyproject.toml  pytest.ini
experimenter/experimenter/: celery.py  settings.py  urls.py  wsgi.py
experimenter/manifesttool/: appconfig.py  cli.py  download.py  exception_utils.py  fetch.py  github_api.py  hgmo_api.py  http.py  nimbus_cli.py  releases.py  repository.py  version.py
experimenter/templates/: experimenter_base.html
experimenter/tests/: experimenter_legacy_tests.sh  fenix-build.env  firefox-desktop-beta-build.env  firefox-fenix-build.env  firefox_desktop_beta_build.env  firefox_desktop_release_build.env  firefox_fenix_beta_build.env  firefox_fenix_debug_build.env  firefox_fenix_nightly_build.env  firefox_fenix_release_build.env  firefox_fennec_beta_build.env  firefox_fennec_release_build.env  firefox_ios_main_build.env  mixins.py  nimbus_integration_tests.sh  nimbus_rust_tests.sh  pyproject.toml  pytest.ini  requirements.txt
schemas/: .gitignore  Dockerfile  README.md  VERSION  generate_json_schema.py  index.d.ts  index.ts  package-lock.json  package.json  pyproject.toml  tox.ini
schemas/jetstream/: analysis_errors.py  metadata.py  statistics.py
schemas/mozilla_nimbus_schemas/: __init__.py
schemas/schemas/: BaseExperimentV7.schema.json  DesktopAllVersionsNimbusExperiment.schema.json  DesktopExperimentBranchV7.schema.json  DesktopFeature.schema.json  DesktopFeatureManifest.schema.json  DesktopNimbusExperiment.schema.json  DesktopNimbusExperimentV7.schema.json  ExperimentBucketConfig.schema.json  ExperimentFeatureConfig.schema.json  ExperimentLocalizations.schema.json  ExperimentOutcome.schema.json  FeatureManifest.schema.json  NimbusExperiment.schema.json  NimbusExperimentV7.schema.json  SdkExperimentBranchV7.schema.json  SdkFeatureManifest.schema.json  SdkNimbusExperiment.schema.json  SdkNimbusExperimentV7.schema.json  V7BaseExperiment.schema.json  V7BaseExperimentBranch.schema.json  V7DesktopExperimentBranch.schema.json  V7DesktopNimbusExperiment.schema.json  V7ExperimentBucketConfig.schema.json  V7ExperimentFeatureConfig.schema.json  V7ExperimentOutcome.schema.json  V7SdkExperimentBranch.schema.json  V7SdkNimbusExperiment.schema.json
(+4259 files in other folders)
