[tool.poetry]
name = "app"
version = "0.1.0"
description = ""
authors = [""]

[tool.poetry.dependencies]
python = "^3.9"
Django = "3.1.8"
black = "20.8b1"
celery = "5.0.5"
coverage = "5.5"
django-cors-headers = "3.7.0"
django-filter = "2.4.0"
django-widget-tweaks = "1.4.8"
djangorestframework = "3.12.4"
dockerflow = "2020.10.0"
factory_boy = "3.2.0"
flake8 = "3.9.1"
gunicorn = "20.1.0"
ipdb = "0.13.7"
mock = "4.0.3"
psycopg2 = "2.8.6"
pytest = "6.2.3"
pytest-django = "4.2.0"
pytest-testmon = "1.1.0"
pytest-watch = "4.2.0"
python-decouple = "3.4"
raven = "6.10.0"
redis = "3.5.3"
requests = {version = "2.25.1", extras = ["security"]}
whitenoise = "5.2.0"
parameterized = "0.8.1"
pytest-cov = "2.11.1"
django-mozilla-product-details = "0.14.1"
django-countries = "7.1"
markus = "3.0.0"
datadog = "0.41.0"
sqlparse = "0.4.1"
asgiref = "3.3.4"
uritemplate = "3.0.1"
packaging = "20.9"
pyparsing = "2.4.7"
django-markdown2 = "0.3.1"
markdown2 = "2.4.0"
tblib = "1.7.0"
pytest-xdist = "2.2.1"
djangorestframework-csv = "2.1.0"
unicodecsv = "0.14.1"
kinto-http = "10.7.0"
jsonschema = "3.2.0"
isort = "5.8.0"
google-cloud-storage = "1.37.1"
django-storages = "1.11.1"
graphene-django = "^2.15.0"
mozilla-nimbus-shared = "^1.4.0"
toml = "^0.10.2"
pydantic = "1.8.1"

[tool.poetry.dev-dependencies]
rope = "^0.19.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
