[tool.poetry]
name = "app"
version = "0.1.0"
description = ""
authors = [""]

[tool.poetry.dependencies]
python = "^3.9"
Django = "3.2.12"
black = "21.12b0"
celery = "5.2.2"
coverage = "5.5"
django-cors-headers = "3.11.0"
django-filter = "2.4.0"
django-widget-tweaks = "1.4.8"
djangorestframework = "3.13.0"
dockerflow = "2020.10.0"
factory_boy = "3.2.0"
flake8 = "3.9.2"
gunicorn = "20.1.0"
ipdb = "0.13.9"
mock = "4.0.3"
psycopg2 = "2.9.1"
pytest = "6.2.4"
pytest-django = "4.5.1"
pytest-testmon = "1.3.0"
pytest-watch = "4.2.0"
python-decouple = "3.6"
raven = "6.10.0"
redis = "3.5.3"
requests = {version = "2.26.0", extras = ["security"]}
whitenoise = "5.3.0"
parameterized = "0.8.1"
pytest-cov = "2.12.1"
django-mozilla-product-details = "0.14.1"
django-countries = "7.3.2"
markus = "3.0.0"
datadog = "0.44.0"
sqlparse = "0.4.2"
asgiref = "3.5.0"
uritemplate = "3.0.1"
packaging = "21.2"
pyparsing = "2.4.7"
django-markdown2 = "0.3.1"
markdown2 = "2.4.0"
tblib = "1.7.0"
pytest-xdist = "2.5.0"
djangorestframework-csv = "2.1.1"
unicodecsv = "0.14.1"
kinto-http = "10.8.0"
jsonschema = "3.2.0"
isort = "5.10.0"
google-cloud-storage = "1.44.0"
django-storages = "1.12.1"
graphene-django = "^2.15.0"
toml = "^0.10.2"
pydantic = "1.9.0"
django-test-migrations = "^1.2.0"
django-admin-rangefilter = "0.8.0"
pyjexl = "^0.3.0"
Pillow = "^9.0.1"
graphene-file-upload = "^1.3.0"
dj-inmemorystorage = "^2.1.0"
PyYAML = "^6.0"
mozilla-nimbus-shared = "^1.7.0"

[tool.poetry.dev-dependencies]
rope = "^0.23.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
