[tool.poetry]
name = "app"
version = "0.1.0"
description = ""
authors = [""]

[tool.poetry.dependencies]
python = "^3.11"
Django = "3.2.23"
black = "22.12.0"
celery = "5.3.0"
chardet = "4.0.0"
click = "8.1.6"
coverage = "6.5"
django-cors-headers = "3.14.0"
django-filter = "2.4.0"
django-widget-tweaks = "1.5.0"
djangorestframework = "3.14.0"
dockerflow = "2020.10.0"
factory_boy = "3.3.0"
gunicorn = "20.1.0"
ipdb = "0.13.9"
mock = "4.0.3"
psycopg2 = "2.9.5"
pytest = "6.2.4"
pytest-django = "4.5.1"
pytest-testmon = "1.3.0"
pytest-watch = "4.2.0"
python-decouple = "3.8"
redis = "4.6.0"
requests = { version = "2.31.0", extras = ["security"] }
responses = "0.24.0"
whitenoise = "5.3.0"
parameterized = "0.9.0"
pytest-cov = "2.12.1"
django-mozilla-product-details = "0.14.1"
django-countries = "7.5"
markus = "3.0.0"
datadog = "0.48.0"
sqlparse = "0.4.4"
asgiref = "3.7.2"
uritemplate = "3.0.1"
packaging = "21.3"
pyparsing = "2.4.7"
django-markdown2 = "0.3.1"
markdown2 = "2.4.0"
tblib = "1.7.0"
pytest-xdist = "2.5.0"
djangorestframework-csv = "2.1.1"
unicodecsv = "0.14.1"
kinto-http = "11.0.1"
jsonschema = "^4.21.1"
google-cloud-storage = "1.44.0"
django-storages = "1.14"
toml = "^0.10.2"
pydantic = "1.10.14"
django-test-migrations = "^1.3.0"
django-admin-rangefilter = "0.12.0"
pyjexl = "^0.3.0"
Pillow = "^9.5.0"
graphene-file-upload = "^1.3.0"
dj-inmemorystorage = "^2.1.0"
PyYAML = "^6.0"
django-import-export = "^2.9.0"
sentry-sdk = "^1.39.1"
djangorestframework-dataclasses = "^1.3.0"
graphene-django = "^3.2.0"
pyright = "^1.1.291"
django-types = "^0.19.1"
mozilla-nimbus-shared = "^2.5.2"
mozilla-nimbus-schemas = "2024.1.4"
django-redis = "^5.4.0"
fontawesomefree = "6.4.0"
django-tailwind = "^3.8.0"
ruff = "^0.1.0"

[tool.poetry.dev-dependencies]
rope = "^0.23.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[tool.pyright]
include = ["experimenter"]
exclude = [
    "**/node_modules",
    "**/__pycache__",
    "**/migrations",
    "experimenter/legacy",
    "**/tests",
]

reportCallInDefaultInitializer = true
reportConstantRedefinition = false
reportFunctionMemberAccess = false
reportGeneralTypeIssues = false
reportImplicitStringConcatenation = false
reportIncompatibleMethodOverride = false
reportIncompatibleVariableOverride = false
reportMissingModuleSource = false
reportMissingParameterType = false
reportMissingSuperCall = false
reportMissingTypeArgument = true
reportOptionalCall = true
reportOptionalIterable = true
reportOptionalMemberAccess = true
reportOptionalOperand = true
reportOptionalSubscript = true
reportPrivateUsage = true
reportPropertyTypeMismatch = true
reportSelfClsParameterName = false
reportTypedDictNotRequiredAccess = true
reportUninitializedInstanceVariable = false
reportUnknownArgumentType = false
reportUnknownLambdaType = false
reportUnknownMemberType = false
reportUnknownParameterType = false
reportUnknownVariableType = false
reportUnnecessaryTypeIgnoreComment = true
reportUntypedBaseClass = false
reportUntypedClassDecorator = true
reportUntypedFunctionDecorator = false
reportUnusedCallResult = false

[tool.ruff]
select = [
    "A",
    "B",
    "C4",
    "DJ",
    "E",
    "F",
    "I",
    "ISC",
    "N",
    "PIE",
    "Q",
    "RET",
    "RUF",
    "SIM",
    "TID",
    "UP",
    "W",
    "YTT",
]
ignore = [
    "A003",
    "B017",
    "DJ001",
    "DJ006",
    "DJ012",
    "E402",
    "E741",
    "F403",
    "N802",
    "N803",
    "N806",
    "N812",
    "N815",
    "PIE796",
    "RET503",
    "RET504",
    "RET505",
    "RUF011",
    "RUF012",
    "SIM102",
    "UP006",
    "UP007",
    "UP038",
]

# Exclude a variety of commonly ignored directories.
exclude = ["migrations", ".tox", "node_modules", "legacy", ".pyenv"]

# Same as Black.
line-length = 90
