[tool.poetry]
name = "cirrus"
version = "0.1.0"
description = ""
authors = [""]

[tool.poetry.dependencies]
python = "^3.10.10"
ruff = "^0.1.0"
fastapi = "^0.109.0"
uvicorn = "^0.27.0"
pytest = "^7.2.2"
httpx = "^0.26.0"
pytest-cov = "^4.0.0"
black = "^23.12.1"
pyright = "^1.1.300"
apscheduler = "^3.9.1"
requests = "^2.31.0"
pytest-asyncio = "^0.23.2"
python-decouple = "^3.8"
glean-sdk = "^53.2.0"
pytest-mock = "^3.12.0"
mozilla-nimbus-shared = "^2.5.2"
sentry-sdk = "^1.39.1"

[tool.pyright]
typeCheckingMode = "strict"
include = ["cirrus"]
exclude = [
    "**/__pycache__",
    "cirrus/generate_docs.py",
]
reportUnnecessaryTypeIgnoreComment = "warning"
pythonVersion = "3.10"

[tool.ruff]
# # Enable Pyflakes `E` and `F` codes by default.
select = ["F", "E", "W", "I", "N", "YTT", "A", "C4", "RET", "SIM"]
ignore = [
    "A003",
    "E402",
    "E741",
    "F403",
    "N802",
    "N803",
    "N806",
    "N812",
    "N815",
    "N817",
    "RET503",
    "RET504",
    "RET505",
    "SIM102",
]

# Same as Black.
line-length = 90

