[tool.poetry]
name = "cirrus"
version = "0.1.0"
description = ""
authors = ["Mozilla"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.10.10"
ruff = "^0.14.0"
coverage = "^7.13.0"
fastapi = "^0.124.0"
uvicorn = "^0.38.0"
pytest = "^7.2.2"
httpx = "^0.28.0"
pytest-cov = "^4.0.0"
black = "^24.10.0"
pyright = "^1.1.300"
apscheduler = "^3.11.0"
requests = "^2.32.4"
pytest-asyncio = "^0.23.8"
python-decouple = "^3.8"
glean-parser = "^18.2.0"
pytest-mock = "^3.15.0"
mozilla-nimbus-shared = "^2.5.2"
sentry-sdk = "^2.47.0"

[build-system]
requires = ["poetry>=2.1.1"]
build-backend = "poetry.core.masonry.api"

[tool.black]
exclude = "cirrus/glean"

[tool.pyright]
typeCheckingMode = "strict"
include = ["cirrus"]
exclude = [
    "**/__pycache__",
    "cirrus/generate_docs.py",
]
reportUnnecessaryTypeIgnoreComment = "warning"
pythonVersion = "3.10"

[tool.ruff]
exclude = ["cirrus/glean"]
# # Enable Pyflakes `E` and `F` codes by default.
select = ["F", "E", "W", "I", "N", "YTT", "A", "C4", "RET", "SIM"]
ignore = [
    "A003",
    "E402",
    "E741",
    "F403",
    "N802",
    "N803",
    "N806",
    "N812",
    "N815",
    "N817",
    "RET503",
    "RET504",
    "RET505",
    "SIM102",
]

# Same as Black.
line-length = 90
