[tool.poetry]
name = "cirrus"
version = "0.1.0"
description = ""
authors = ["Mozilla"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
ruff = "^0.15.0"
coverage = "^7.13.0"
fastapi = "^0.132.0"
uvicorn = "^0.40.0"
pytest = "^7.2.2"
httpx = "^0.28.0"
pytest-cov = "^4.0.0"
pyright = "^1.1.408"
apscheduler = "^3.11.0"
requests = "^2.32.4"
responses = "^0.25.8"
pytest-asyncio = "^0.23.8"
python-decouple = "^3.8"
glean-parser = "^18.2.0"
pytest-mock = "^3.15.0"
mozilla-nimbus-shared = "^2.5.2"
sentry-sdk = "^2.53.0"

[build-system]
requires = ["poetry>=2.1.1"]
build-backend = "poetry.core.masonry.api"

[tool.pyright]
typeCheckingMode = "strict"
include = ["cirrus"]
exclude = [
    "**/__pycache__",
    "cirrus/generate_docs.py",
]
reportUnnecessaryTypeIgnoreComment = "warning"
pythonVersion = "3.11"

[tool.ruff]
exclude = ["cirrus/glean"]
line-length = 90

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
docstring-code-format = true

[tool.ruff.lint]
select = [
    "A",
    "B",
    "C4",
    "DJ",
    "E",
    "F",
    "I",
    "ISC",
    "N",
    "PIE",
    "Q",
    "RET",
    "RSE",
    "RUF",
    "SIM",
    "TID",
    "UP",
    "W",
    "YTT",
    "PTH",
]
ignore = [
    "A003",
    "A005",
    "B017",
    "B035",
    "B905",
    "DJ001",
    "DJ006",
    "DJ012",
    "E402",
    "E741",
    "F403",
    "N802",
    "N803",
    "N806",
    "N812",
    "N815",
    "PIE796",
    "PTH208",
    "RET503",
    "RET504",
    "RET505",
    "RUF012",
    "RUF059",
    "SIM102",
    "UP006",
    "UP007",
    "UP045",
]
