[tool.poetry]
name = "experimenter integration tests"
version = "0.1.0"
description = ""
authors = ["Benjamin Forehand Jr <bforehand@mozilla.com>"]
license = "Mozilla Public License Version 2.0"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
pytest-base-url = "^2.1.0"
pytest-selenium = "^4.1.0"
pypom = "^2.2.4"
pytest = "^8.4.0"
requests = "^2.32.4"
pytest-html = "^4.1.1"
selenium = "^4.32.0"
pytest-variables = "^3.1.0"
zope-interface = "^6.4.post2"
zope-component = "^6.0"
wcwidth = "^0.2.13"
more-itertools = "^10.7.0"
urllib3 = "^2.5.0"
chardet = "^5.2.0"
certifi = "^2024.12.14"
pytest-metadata = "^3.1.1"
zope-event = "^5.1"
zope-hookable = "^6.0"
zope-deprecation = "^5.1"
zope-deferredimport = "^5.1"
zope-proxy = "^5.3"
pluggy = "^1.6.0"
importlib-metadata = "^7.2.1"
packaging = "^24.2"
attrs = "^23.2.0"
py = "^1.11.0"
idna = "^3.10"
zipp = "^3.23.0"
pyparsing = "^3.2.0"
six = "^1.17.0"
pytest-xdist = "^3.8.0"
execnet = "^2.1.1"
pytest-forked = "^1.6.0"
apipkg = "^3.0.2"
python-dateutil = "^2.9.0.post0"
pydantic = "^1.10.15"
marshmallow = "^3.26.0"
marshmallow-enum = "^1.5.1"
mypy-extensions = "^1.1.0"
charset-normalizer = "^3.4.0"
kinto-http = "^11.9.0"
backoff = "^2.2.1"
pyjexl = "^0.3.0"
future = "^1.0.0"
parsimonious = "^0.10.0"
regex = "^2024.11.6"
pytest-sentry = "^0.3.3"
sentry-sdk = "^2.35.0"
wrapt = "^1.17.0"
pytest-rerunfailures = "^14.0"
setuptools = "^70.3.0"
dataclasses-json = "^0.6.7"
flask = "^3.1.1"
pytest-repeat = "^0.9.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
